--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is the backend for the whole kabelsalat-lab project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "safestart": "node server.js"
   },
   "type": "module",
   "keywords": [],
