--- a/.github/workflows/node_deploy.yml
+++ b/.github/workflows/node_deploy.yml
@@ -21,4 +21,4 @@ jobs:
             cd ~/kabelsalat-lab/kabelsalat-lab-backend
             git pull
             npm install
-            pm2 restart server.js
+            pm2 restart 0
